# starter-template

./: README.md
my_first_concert/: CMakeLists.txt  package.xml
my_first_concert/concert/: start_solution_and_robot.concert
my_first_concert/solutions/: concert.launch  solution.services
my_rapps/: CMakeLists.txt  package.xml  setup.py
my_rapps/rapps/dummy_video_teleop/: dummy_video_teleop.launch  dummy_video_teleop.rapp
my_rapps/scripts/: dummy_video_teleop.py
my_robot_launcher/: CMakeLists.txt  package.xml
my_robot_launcher/interactions/: admin.interactions  teleop.interactions
my_robot_launcher/launch/: concert_client.launch  standalone.launch
