<?xml version="1.0"?>
<package>
  <name>my_robot_launcher</name>
  <version>0.0.0</version>
  <description>
    It is starter template to create your robot launcher with app manager.
    This package includes template robot bringup of standalone mode and concert mode.

    Also it includes dummy rapp file for the robot you can play with.
  </description>

  <maintainer email="your@email.address">YOUR EMAIL ADDRESS</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/my_robot_launcher</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rocon_app_manager</build_depend>
  <build_depend>rocon_apps</build_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>

  <export>
    <!--  <rocon_app>-->
  </export>
</package>
